<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="device_cloud_phone">云手机</string>
  <string name="device_resolution">清晰度</string>
  <string name="device_default_mode">默认模式</string>
  <string name="device_professional_mode">专业模式</string>
  <string name="device_resolution_super_top">超清(慢)</string>
  <string name="device_resolution_high_top">高清(中)</string>
  <string name="device_resolution_common_top">普清(快)</string>
  <string name="device_resolution_super">超清(慢)\n720p</string>
  <string name="device_resolution_high">高清(中)\n540p</string>
  <string name="device_resolution_common">普清(快)\n360p</string>
  <string name="device_resolution_auto">智能\n自动选择</string>
  <string name="device_voice">声音</string>
  <string name="device_virtual_keys">按键</string>
  <string name="device_full">满屏</string>
  <string name="device_exit_tips">再按一次退出云手机</string>
  <string name="device_reboot">重启云机</string>
  <string name="device_exit">退出云机</string>
  <string name="device_exit_msg">退出云手机后APP将继续正常运行</string>
  <string name="device_exit_dialog_tips">是否退出云手机?退出后APP将继续正常运行</string>
  <string name="device_reboot_dialog_tips">云手机重启预计需要1-3分钟，期间无法对云手机进行操作,是否重启？</string>
  <string name="device_left_time_tips">云手机即将在%d分钟后到期，到期后设备数据将被清除，为了不影响您的正常使用，请尽快续费</string>
  <string name="device_expire_tips">云手机已到期，已为您自动断开</string>
  <string name="device_recharge">续费</string>
  <string name="cancel">取消</string>
  <string name="confirm">确定</string>
  <string name="confirm_count">确定 (%d)</string>
  <string name="title_tips">温馨提示</string>
  <string name="disconnect_tips">因您长时间未操作，已为您自动断开连接</string>
  <string name="reconnect_device">重新连接</string>

  <string name="connect_progressing">加速连接云手机...</string>
  <string name="connect_retry">正在重新连接...</string>
  <string name="connect_resolution">正在切换清晰度...</string>
  <string name="connect_change_network">正在切换网络...</string>
  <string name="connect_net_tips">连接断开，请重新连接</string>
  <string name="connect_wifi_tips">已切换至Wi-Fi网络</string>
  <string name="connect_mobile_tips">当前为非Wi-Fi环境，请注意流量消耗</string>
  <string name="connect_net_error">当前网络异常，请检查网络后重新连接</string>
  <string name="connect_mobile_net">采用视频流方式控制云手机将消耗您的手机流量，是否继续？</string>
  <string name="connect_no_tips">不再提示</string>
  <string name="connect_time_out">连接超时，请重新连接</string>
  <string name="connect_error">连接失败，请重新连接</string>

  <string name="change_resolution_common">清晰度已切换为普清</string>
  <string name="change_resolution_high">清晰度已切换为高清</string>
  <string name="change_resolution_super">清晰度已切换为超清</string>


  <string name="main_scan_device_local">本机</string>
  <string name="toast_no_browser">没有默认浏览器</string>
  <string name="toast_address_error">地址格式错误</string>
  <string name="toast_timeout">连接超时，请重试</string>
  <string name="toast_connect_server">连接云手机失败</string>

</resources>